--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rolandtothblog",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Roland Toth Blog",
   "author": "Roland Toth",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.8.2",
+    "@11ty/eleventy": "^0.9.0-beta.1",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "autoprefixer": "^9.5.0",
