--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Roland Toth",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0-beta.1",
+    "@11ty/eleventy": "^0.8.3",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "autoprefixer": "^9.5.0",
