package updates, fix filterbox click and no text on mobile

--- a/package.json
+++ b/package.json
@@ -1,33 +1,9 @@
 {
   "name": "rolandtothblog",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Roland Toth Blog",
   "author": "Roland Toth",
   "license": "MIT",
-  "devDependencies": {
-    "@11ty/eleventy": "^0.8.3",
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "autoprefixer": "^9.5.0",
-    "babel-preset-env": "^1.7.0",
-    "cpx": "^1.5.0",
-    "cssnano": "^4.1.10",
-    "del": "^3.0.0",
-    "glob": "^7.1.3",
-    "html-minifier": "^3.5.20",
-    "image-size": "^0.7.4",
-    "jshint": "^2.10.2",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.13.1",
-    "onchange": "^5.2.0",
-    "parallelshell": "^3.0.2",
-    "path": "^0.12.7",
-    "postcss": "^7.0.14",
-    "postcss-cli": "^6.1.2",
-    "remove-markdown": "^0.3.0",
-    "striptags": "^3.1.1",
-    "uglify-js": "^3.5.2"
-  },
   "scripts": {
     "build:cssdev": "node-sass --include-path src/scss/includes src/scss/style.scss assets/styles/style.css",
     "copy:jsdev": "cpx src/js/main.js assets/scripts/",
@@ -37,11 +13,35 @@
     "build:js": "babel --presets env --source-maps false src/js/main.js | uglifyjs -o assets/scripts/main.js",
     "build": "npm run build:css && npm run build:js",
     "prebuild:js": "npm run lint",
-    "watch:dev": "parallelshell \"npm run watch:cssdev\" \"npm run watch:jsdev\"",
+    "watch:dev": "concurrently \"npm run watch:cssdev\" \"npm run watch:jsdev\"",
     "watch:cssdev": "onchange \"src/scss/*.scss\" -- npm run build:cssdev",
     "watch:jsdev": "onchange \"src/js/*.js\" -- npm run copy:jsdev",
-    "watch": "parallelshell \"npm run watch:css\" \"npm run watch:js\"",
+    "watch": "concurrently \"npm run watch:css\" \"npm run watch:js\"",
     "watch:css": "onchange \"src/scss/*.scss\" -- npm run build:css",
     "watch:js": "onchange \"src/js/*.js\" -- npm run build:js"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^0.8.3",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "autoprefixer": "^9.5.0",
+    "babel-preset-env": "^1.7.0",
+    "concurrently": "^7.0.0",
+    "cpx": "^1.5.0",
+    "cssnano": "^4.1.10",
+    "del": "^6.0.0",
+    "glob": "^7.1.3",
+    "html-minifier": "^4.0.0",
+    "image-size": "^0.7.4",
+    "jshint": "^2.10.2",
+    "mkdirp": "^1.0.4",
+    "node-sass": "^7.0.1",
+    "onchange": "^7.1.0",
+    "path": "^0.12.7",
+    "postcss": "^7.0.14",
+    "postcss-cli": "^6.1.2",
+    "remove-markdown": "^0.3.0",
+    "striptags": "^3.1.1",
+    "uglify-js": "^3.5.2"
   }
 }
