--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "rolandtothblog",
-  "version": "1.0.3",
+  "version": "2.0.1",
   "description": "Roland Toth Blog",
   "author": "Roland Toth",
   "license": "MIT",
   "scripts": {
+    "dev": "npx @11ty/eleventy --serve",
     "build:cssdev": "node-sass --include-path src/scss/includes src/scss/style.scss assets/styles/style.css",
     "copy:jsdev": "cpx src/js/main.js assets/scripts/",
     "prebuild:css": "node-sass --include-path src/scss/includes src/scss/style.scss src/scss/style.css",
@@ -21,27 +22,28 @@
     "watch:js": "onchange \"src/js/*.js\" -- npm run build:js"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.8.3",
+    "@11ty/eleventy": "^3.0.0",
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
-    "autoprefixer": "^9.5.0",
+    "autoprefixer": "^10.4.20",
     "babel-preset-env": "^1.7.0",
-    "concurrently": "^7.0.0",
+    "concurrently": "^9.1.0",
     "cpx": "^1.5.0",
-    "cssnano": "^4.1.10",
-    "del": "^6.0.0",
-    "glob": "^7.1.3",
-    "html-minifier": "^4.0.0",
-    "image-size": "^0.7.4",
+    "cssnano": "^7.0.6",
+    "del": "^8.0.0",
+    "glob": "^11.0.0",
+    "htmlnano": "^2.1.1",
+    "image-size": "^1.2.0",
     "jshint": "^2.10.2",
-    "mkdirp": "^1.0.4",
-    "node-sass": "^7.0.1",
+    "mkdirp": "^3.0.1",
+    "node-sass": "^9.0.0",
     "onchange": "^7.1.0",
     "path": "^0.12.7",
-    "postcss": "^7.0.14",
-    "postcss-cli": "^6.1.2",
-    "remove-markdown": "^0.3.0",
+    "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
+    "remove-markdown": "^0.6.0",
     "striptags": "^3.1.1",
+    "terser": "^5.37.0",
     "uglify-js": "^3.5.2"
   }
 }
